# Project-Frankenstein

./: .env.example  .gitignore  ABOUT.md  ARCHITECTURE.md  BENCHMARK.md  CONSCIOUSNESS.md  CONSCIOUSNESS_TEST.md  CONTRIBUTIONS.md  FRANK_COMPLETE_DOCUMENTATION.md  HOW_IT_WORKS.md  LICENSE  MANUAL.md  MEMORY&PERSISTENCE-ARCHITECTURE.md  README.md  THERAPY.md  USECASES.md  WHITEPAPER.md  _bootstrap.py  config.yaml.example  install-wizard.spec  install.sh  install_wizard.py  pyproject.toml  requirements.txt  test_consciousness_report.json  test_english_fuzz.py  test_functional.py  test_functional_report.json  therapy.md
agentic/: __init__.py  executor.py  loop.py  planner.py  state.py  test_agent.py  tools.py
common/: qwen_autoscale.py
config/: adi_config.py  ewish_config.py  fas_popup_config.py  genesis_config.json  gpu.py  logging_config.py  paths.py
configs/: models.yaml  paths.json
core/: app.py
database/: acc_monitor.db  agent_state.db  aicore.sqlite  akam_cache.db  amygdala.db  atlas.db  autonomous_research.db  backfill_state.json  chat_memory.db  clipboard_history.db  companion.db  consciousness.db  dream.db  e_cpmm.db  e_sir.db  e_wish.db  experiment_lab.db  fas_scavenger.db  frank.db  hypothesis_engine.db  mirror.db  muse.db  nerd_physics.db  notes.db  nucleus_accumbens.db  pip_agent.db  quantum_reflector.db  rooms.db  sandbox_awareness.db  sft_stabilizer.db  sovereign.db  subconscious.db  system_bridge.db  thalamus.db  therapist.db  titan.db  titan_vector_ids.json  titan_vectors.npz  todos.db  world_experience.db
desktopd/: app.py
ext/: __init__.py  (+17 more)
(+584 files in other folders)
