[project]
name = "project-frankenstein"
version = "1.0.0"
description = "F.R.A.N.K. — Fully Realized Autonomous Neural Kernel"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/gschaidergabriel/Project-Frankenstein"
Issues = "https://github.com/gschaidergabriel/Project-Frankenstein/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
